# scry-proxy

./: .gitignore  BENCHMARKING.md  BENCHMARK_RESULTS.md  CLAUDE.md  CONNECTION_POOLING_PLAN.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HTTP_PUBLISHER.md  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  justfile  rustfmt.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish-image.yml
benches/: proxy_throughput.rs
benchmarks/: .gitignore  Cargo.toml  Dockerfile.profile  README.md  docker-compose.profile.yml  docker-compose.yml  generate_charts.py  profile-scry.sh  run-comparison.sh  run-resource-benchmark.sh  run-scale-test.sh  setup-pgbouncer.sh
benchmarks/pgbouncer/: pgbouncer.ini  userlist.txt
benchmarks/pgcat/: pgcat.toml
benchmarks/sql/: 01-schema.sql  02-seed-data.sql  03-scale-data.sql
benchmarks/src/: main.rs  params.rs  queries.rs  results.rs  runner.rs
docs/: CONNECTION_MULTIPLEXING_REQUIREMENTS.md  architecture.md  circuit-breaker.md  configuration.md  connection-pooling.md  deployment.md  development.md  getting-started.md  health-checks.md  metrics.md  observability.md  query-anonymization.md  resilience.md  transparency-contract.md
docs/plans/: 2026-01-07-tls-support.md  2026-01-07-transaction-pooling-design.md  2026-01-07-transaction-pooling-impl.md  2026-01-09-pgbouncer-parity.md  2026-01-18-proxy-comparison-benchmarks.md  2026-01-19-connection-pool-warmup.md  2026-01-19-scale-testing-benchmarks.md  2026-01-24-CRIT2-tls-connection-state-reset.md  2026-01-25-HIGH1-pool-size-validation.md  2026-01-25-HIGH2-wait-queue-saturation.md  2026-01-25-HIGH3-message-framing.md  2026-01-25-HIGH4-startup-message-framing.md  CRIT1_DISCARD_ALL_RESPONSE_HANDLING.md
docs/superpowers/plans/: 2026-07-06-production-readiness-implementation.md  2026-07-06-wp9-p2-tasks.md  2026-07-07-wp10-p4-tasks.md
docs/superpowers/specs/: 2026-07-05-p1-security-privacy-design.md  2026-07-05-p2-protocol-correctness-design.md  2026-07-05-p3-reliability-resilience-design.md  2026-07-05-p4-operability-observability-design.md  2026-07-05-p5-performance-scale-design.md  2026-07-05-p6-compatibility-contract-design.md  2026-07-05-p7-supply-chain-release-design.md  2026-07-05-scry-production-readiness-vision.md
schema/: query_event.fbs
scry-proxy/: Cargo.toml
scry-proxy/benches/: overhead_delta.rs  proxy_throughput.rs
scry-proxy/src/: lib.rs  main.rs
scry-proxy/src/admin/: commands.rs  mod.rs  response.rs
scry-proxy/src/auth/: authenticator.rs  backend.rs  file_auth.rs  mod.rs  scram.rs  types.rs
scry-proxy/src/config/: mod.rs  pgbouncer.rs
scry-proxy/src/observability/: health.rs  hot_data.rs  metrics.rs  metrics_server.rs  mod.rs  prometheus.rs  test_support.rs  timeline.rs
scry-proxy/src/protocol/: anonymize.rs  auth_messages.rs  bind.rs  command_detector.rs  extractor.rs  mod.rs  postgres.rs  startup.rs  traits.rs
scry-proxy/src/proxy/: admin_handles.rs  cache.rs  connection.rs  connection_state.rs  event_batcher.rs  mod.rs  mode_enforcer.rs  pool_manager.rs  server.rs  state_replayer.rs  tcp_pool.rs  transaction.rs  wait_queue.rs
scry-proxy/src/publisher/: debug_logger.rs  http_publisher.rs  mod.rs
scry-proxy/src/resilience/: circuit_breaker.rs  healthcheck.rs  mod.rs  retry.rs
scry-proxy/src/routing/: mod.rs
scry-proxy/src/tls/: backend.rs  config.rs  mod.rs  startup.rs  transport.rs
scry-proxy/tests/: admin_command_effect_test.rs  admin_config_test.rs  admin_console_test.rs  admin_truthfulness_test.rs  auth_integration_test.rs  circuit_breaker_scope_test.rs  client_registry_test.rs  connection_limit_test.rs  connection_multiplexing.rs  differential_transparency_test.rs  docs_code_parity_test.rs  framing_fuzz.rs  integration_test.rs  metrics_surface_test.rs  pooling_integration_test.rs  pooling_safety_test.rs  pooling_test.rs  query_timeout_test.rs  shutdown_test.rs  stateful_test.rs  tls_integration.rs  transaction_pooling_test.rs
scry-proxy/tests/common/: mod.rs
scry-proxy/tests/fixtures/: secure_defaults.snapshot
src/: lib.rs  main.rs
src/config/: mod.rs
src/observability/: health.rs  hot_data.rs  metrics.rs  metrics_server.rs  mod.rs  prometheus.rs  timeline.rs
src/protocol/: anonymize.rs  postgres.rs  traits.rs
src/proxy/: server.rs  tcp_pool.rs
src/publisher/: debug_logger.rs  event.rs  flatbuffers_serializer.rs  http_publisher.rs  mod.rs  trait.rs
src/resilience/: circuit_breaker.rs  errors.rs  healthcheck.rs
tests/: integration_test.rs  pooling_test.rs  shutdown_test.rs  stateful_test.rs
