[workspace]
members = ["scry-proxy", "benchmarks"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ScryData <opensource@scrydata.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Postgres protocol handling
tokio-postgres = "0.7"
postgres-protocol = "0.6"
bytes = "1.5"

# Configuration
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Observability - OpenTelemetry
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"

# Query journaling - FlatBuffers / FlexBuffers
flatbuffers = "23.5"
flexbuffers = "2.0"

# Connection pooling
deadpool = "0.10"
deadpool-postgres = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"
pin-project = "1.1"
async-trait = "0.1"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
rand = "0.8"

# Query anonymization
sqlparser = { version = "0.52", features = ["visitor"] }
blake3 = "1.5"

# HTTP client for production event publisher
reqwest = { version = "0.12", features = ["json", "gzip"] }

# Metrics and observability infrastructure
hdrhistogram = "7.5"
parking_lot = "0.12"
axum = "0.7"
http-body-util = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
ahash = "0.8"

# Integration testing
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }

# Testing utilities
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.4"

# TLS support
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
webpki-roots = "0.26"

# Authentication
md5 = "0.7"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
base64 = "0.22"
