[package]
name = "scry-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "bench-runner"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.12"
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hdrhistogram = "7.5"
rand = "0.8"
anyhow = "1.0"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.31"
