[package]
name = "scry"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A transparent proxy for SQL systems with built-in observability"
license.workspace = true

[[bin]]
name = "scry"
path = "src/main.rs"

[dependencies]
# Protocol dependency (published on crates.io)
scry-protocol = "0.1.0"

# Async runtime
tokio = { workspace = true }

# Postgres protocol handling
tokio-postgres = { workspace = true }
postgres-protocol = { workspace = true }
bytes = { workspace = true }

# Configuration
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rust-ini = "0.21"

# Observability - OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Connection pooling
deadpool = { workspace = true }
deadpool-postgres = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async utilities
futures = { workspace = true }
pin-project = { workspace = true }
async-trait = { workspace = true }

# Utilities
uuid = { workspace = true }
rand = { workspace = true }

# Query anonymization
sqlparser = { workspace = true }
blake3 = { workspace = true }

# HTTP client for production event publisher
reqwest = { workspace = true }

# Metrics and observability infrastructure
hdrhistogram = { workspace = true }
parking_lot = { workspace = true }
axum = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
ahash = { workspace = true }
indexmap = "2.7"

# TLS support
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }

# Authentication
md5 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
pbkdf2 = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
# Integration testing
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

# Testing utilities
tokio-test = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = "3.10"

# TLS integration testing
native-tls = "0.2"
postgres-native-tls = "0.5"

[[bench]]
name = "proxy_throughput"
harness = false
